--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <h2>Eventos</h2>
             <!-- Lista de eventos da festa -->
             <ul>
-                <li>Evento 1</li>
+                <li>doces</li>
                 <li>Evento 2</li>
                 <li>Evento 3</li>
             </ul>
